--- a/AzureSDK.xcworkspace/xcshareddata/xcschemes/AzureCore.xcscheme
+++ b/AzureSDK.xcworkspace/xcshareddata/xcschemes/AzureCore.xcscheme
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0A686488233E834D004B7E17"
-               BuildableName = "AzureStorageBlob.framework"
-               BlueprintName = "AzureStorageBlob"
-               ReferencedContainer = "container:AzureStorageBlob.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0A686491233E834D004B7E17"
-               BuildableName = "AzureStorageBlobTests.xctest"
-               BlueprintName = "AzureStorageBlobTests"
-               ReferencedContainer = "container:AzureStorageBlob.xcodeproj">
+               BlueprintIdentifier = "0A3A5D752315C89C00473FDA"
+               BuildableName = "AzureCore.framework"
+               BlueprintName = "AzureCore"
+               ReferencedContainer = "container:sdk/core/AzureCore/AzureCore.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -42,16 +28,25 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0A3A5D752315C89C00473FDA"
+            BuildableName = "AzureCore.framework"
+            BlueprintName = "AzureCore"
+            ReferencedContainer = "container:sdk/core/AzureCore/AzureCore.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO"
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0A686491233E834D004B7E17"
-               BuildableName = "AzureStorageBlobTests.xctest"
-               BlueprintName = "AzureStorageBlobTests"
-               ReferencedContainer = "container:AzureStorageBlob.xcodeproj">
+               BlueprintIdentifier = "0A3A5DDD2315D17F00473FDA"
+               BuildableName = "AzureCoreTests.xctest"
+               BlueprintName = "AzureCoreTests"
+               ReferencedContainer = "container:sdk/core/AzureCore/AzureCore.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -66,6 +61,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0A3A5D752315C89C00473FDA"
+            BuildableName = "AzureCore.framework"
+            BlueprintName = "AzureCore"
+            ReferencedContainer = "container:sdk/core/AzureCore/AzureCore.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -76,10 +80,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0A686488233E834D004B7E17"
-            BuildableName = "AzureStorageBlob.framework"
-            BlueprintName = "AzureStorageBlob"
-            ReferencedContainer = "container:AzureStorageBlob.xcodeproj">
+            BlueprintIdentifier = "0A3A5D752315C89C00473FDA"
+            BuildableName = "AzureCore.framework"
+            BlueprintName = "AzureCore"
+            ReferencedContainer = "container:sdk/core/AzureCore/AzureCore.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
