--- a/AzureSDK.xcworkspace/xcshareddata/xcschemes/AzureSDKDemoSwift.xcscheme
+++ b/AzureSDK.xcworkspace/xcshareddata/xcschemes/AzureSDKDemoSwift.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7AE9D566248EF6400029003C"
-               BuildableName = "AzureIdentity.framework"
-               BlueprintName = "AzureIdentity"
-               ReferencedContainer = "container:AzureIdentity.xcodeproj">
+               BlueprintIdentifier = "0A3A5E752315E70400473FDA"
+               BuildableName = "AzureSDKDemoSwift.app"
+               BlueprintName = "AzureSDKDemoSwift"
+               ReferencedContainer = "container:examples/AzureSDKDemoSwift/AzureSDKDemoSwift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,18 +26,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7AE9D56F248EF6400029003C"
-               BuildableName = "AzureIdentityTests.xctest"
-               BlueprintName = "AzureIdentityTests"
-               ReferencedContainer = "container:AzureIdentity.xcodeproj">
+               BlueprintIdentifier = "3124154626BDB27C001C3523"
+               BuildableName = "AzureSDKDemoSwiftUITests.xctest"
+               BlueprintName = "AzureSDKDemoSwiftUITests"
+               ReferencedContainer = "container:examples/AzureSDKDemoSwift/AzureSDKDemoSwift.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -52,6 +50,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "0A3A5E752315E70400473FDA"
+            BuildableName = "AzureSDKDemoSwift.app"
+            BlueprintName = "AzureSDKDemoSwift"
+            ReferencedContainer = "container:examples/AzureSDKDemoSwift/AzureSDKDemoSwift.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -59,15 +67,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7AE9D566248EF6400029003C"
-            BuildableName = "AzureIdentity.framework"
-            BlueprintName = "AzureIdentity"
-            ReferencedContainer = "container:AzureIdentity.xcodeproj">
+            BlueprintIdentifier = "0A3A5E752315E70400473FDA"
+            BuildableName = "AzureSDKDemoSwift.app"
+            BlueprintName = "AzureSDKDemoSwift"
+            ReferencedContainer = "container:examples/AzureSDKDemoSwift/AzureSDKDemoSwift.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
