--- a/AzureSDK.xcworkspace/xcshareddata/xcschemes/AzureStorageBlob.xcscheme
+++ b/AzureSDK.xcworkspace/xcshareddata/xcschemes/AzureStorageBlob.xcscheme
@@ -14,10 +14,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0A3A5D752315C89C00473FDA"
-               BuildableName = "AzureCore.framework"
-               BlueprintName = "AzureCore"
-               ReferencedContainer = "container:AzureCore.xcodeproj">
+               BlueprintIdentifier = "0A686488233E834D004B7E17"
+               BuildableName = "AzureStorageBlob.framework"
+               BlueprintName = "AzureStorageBlob"
+               ReferencedContainer = "container:sdk/storage/AzureStorageBlob/AzureStorageBlob.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0A686491233E834D004B7E17"
+               BuildableName = "AzureStorageBlobTests.xctest"
+               BlueprintName = "AzureStorageBlobTests"
+               ReferencedContainer = "container:sdk/storage/AzureStorageBlob/AzureStorageBlob.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,25 +42,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0A3A5D752315C89C00473FDA"
-            BuildableName = "AzureCore.framework"
-            BlueprintName = "AzureCore"
-            ReferencedContainer = "container:AzureCore.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO"
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0A3A5DDD2315D17F00473FDA"
-               BuildableName = "AzureCoreTests.xctest"
-               BlueprintName = "AzureCoreTests"
-               ReferencedContainer = "container:AzureCore.xcodeproj">
+               BlueprintIdentifier = "0A686491233E834D004B7E17"
+               BuildableName = "AzureStorageBlobTests.xctest"
+               BlueprintName = "AzureStorageBlobTests"
+               ReferencedContainer = "container:sdk/storage/AzureStorageBlob/AzureStorageBlob.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -61,15 +66,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0A3A5D752315C89C00473FDA"
-            BuildableName = "AzureCore.framework"
-            BlueprintName = "AzureCore"
-            ReferencedContainer = "container:AzureCore.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -80,10 +76,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0A3A5D752315C89C00473FDA"
-            BuildableName = "AzureCore.framework"
-            BlueprintName = "AzureCore"
-            ReferencedContainer = "container:AzureCore.xcodeproj">
+            BlueprintIdentifier = "0A686488233E834D004B7E17"
+            BuildableName = "AzureStorageBlob.framework"
+            BlueprintName = "AzureStorageBlob"
+            ReferencedContainer = "container:sdk/storage/AzureStorageBlob/AzureStorageBlob.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
