--- a/AzureSDK.xcworkspace/xcshareddata/xcschemes/all.xcscheme
+++ b/AzureSDK.xcworkspace/xcshareddata/xcschemes/all.xcscheme
@@ -256,6 +256,16 @@
                ReferencedContainer = "container:sdk/template/AzureTemplate/AzureTemplate.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3124154626BDB27C001C3523"
+               BuildableName = "AzureSDKDemoSwiftUITests.xctest"
+               BlueprintName = "AzureSDKDemoSwiftUITests"
+               ReferencedContainer = "container:examples/AzureSDKDemoSwift/AzureSDKDemoSwift.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
