--- a/AzureSDK.xcworkspace/xcshareddata/xcschemes/examples.xcscheme
+++ b/AzureSDK.xcworkspace/xcshareddata/xcschemes/examples.xcscheme
@@ -43,6 +43,16 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3124154626BDB27C001C3523"
+               BuildableName = "AzureSDKDemoSwiftUITests.xctest"
+               BlueprintName = "AzureSDKDemoSwiftUITests"
+               ReferencedContainer = "container:examples/AzureSDKDemoSwift/AzureSDKDemoSwift.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
